# IIR_Filter_Design

./: CMakeLists.txt  README.md  main.cpp  main.h
fftw/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
plot2d/: BLAlignedText.cpp  BLAlignedText.h  CMakeLists.txt  README.md  XYAxis.cpp  XYAxis.h  XYData.cpp  XYData.h  XYDrawingBackend.cpp  XYDrawingBackend.h  XYPlot.cpp  XYPlot.h  XYPoint.cpp  XYPoint.h  XYRect.cpp  XYRect.h  XYTrack.cpp  XYTrack.h  XYblend2dBackend.cpp  XYblend2dBackend.h  dash.h  main.cpp
